# aerial-auto-segment

./: .gitignore  10000.pcd  10000.ply  INSTALLATION.md  README.md  autoseg.ipynb  autoseg.py  autoseg.yml  autoseg_mesh.ipynb  autoseg_mesh_v2.ipynb  convert_lulc_labels.py  duck_gps_enabled_seg_v0.ipynb  dynamicworld_export.py  environment.yml  lulc_preprocessing.ipynb  merge_planet_bands.py  merge_tifs.ipynb  merge_tifs.py  mesh.py  messing_around.py  mgl.py  mgl_v2.py  playground.ipynb  preprocess.py  project_mesh.ipynb  project_mesh.py  pyr.py  quad_video.py  reproject_raster.py  requirements.txt
autoseg_classical_segmentation/: segment.py
autoseg_eval/: classical_metrics.ipynb  commonize_gt.py  eval.py  jitter_metrics.ipynb  metrics.ipynb  play.ipynb  utils.py  vfm_metrics.ipynb
autoseg_refinement/: draw.py  sam_refine.py
autosegment/: autoseg_fast.py  autoseg_v2.py  gl_project.py  labeled_cartd_autosegment.txt
bash/: batch_preprocess.sh  batch_preprocess_chesapeake_lulc.sh  commonize_lulc_labels.sh  dynamicworld_export.sh  merge_original_tiles.sh  preprocess.sh  reproject.sh  stack_planet_visual_nir.sh
earth_engine_download/: dynamicworld.ipynb
figures/: count_used_data.ipynb  gen_result_strips.py  grab_interesting_results.py  lulc_sxs_zoom.ipynb  spatial-ablation.ipynb  spatial-values.txt
geojsons/: big_bear_lake.geojson  castaiclake.geojson  clinton.geojson  duck.geojson  kentucky_river.geojson  northfield.geojson  virginia_beach_creeds.geojson  virginia_beach_false_cape_landing.geojson
lulc_refinement/dgm/: CMakeLists.txt  densecrf_inference.cc
(+3550 files in other folders)
